--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,5 @@
 
-name: gemini-business-proxy Docker Image CI/CD Pipeline
+name: gemini-2-api Docker Image CI/CD Pipeline
 
 on:
   workflow_dispatch:
@@ -18,8 +18,8 @@ permissions:
   actions: read
 
 env:
-  DOCKER_REPO: bailangvvking/gemini-business-proxy
-  IMAGE_NAME: gemini-business-proxy
+  DOCKER_REPO: bailangvvking/gemini-2-api
+  IMAGE_NAME: gemini-2-api
   IMAGE_TAG: latest
 
 jobs:
